Feat(DatabaseConfig): Configure MySQL database for Payment Service - Set up MySQL database connection properties - Define `spring.datasource.url`, `username`, and `password` - Configure Hibernate properties (`ddl-auto=update`, `open-in-view=false`) - Assign port `8084` to the Product Service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=ecommerce-product-service
+
+server.port=8085
+# MySQL Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce_microservices
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
+# JPA and Hibernate Configurations
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
